--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "mocha": "NODE_ENV=test node_modules/.bin/mocha",
-    "test": "NODE_ENV=test node_modules/.bin/mocha __tests__/*.js --timeout 10000",
-    "test:cov": "NODE_ENV=test nyc --reporter=text ./node_modules/.bin/mocha __tests__/*.js --timeout 10000",
-    "test:html": "NODE_ENV=test nyc --reporter=lcov ./node_modules/.bin/mocha __tests__/*.js --timeout 10000",
+    "test": "NODE_ENV=test  node_modules/.bin/mocha __tests__/**/*.js",
+    "test:cov": "NODE_ENV=test nyc --reporter=text ./node_modules/.bin/mocha __tests__/**/*.js",
+    "test:html": "NODE_ENV=test nyc --reporter=lcov ./node_modules/.bin/mocha __tests__/**/*.js",
+    "check:cov": "NODE_ENV=test nyc --check-coverage=true ./node_modules/.bin/mocha __tests__/**/*.js",
     "lint": "./node_modules/.bin/eslint --fix \"./src/**/*.js\""
   },
   "dependencies": {
@@ -16,21 +17,23 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/supertest": "^2.0.10",
     "@types/mocha": "types/mocha",
     "chai": "^4.2.0",
     "concurrently": "^5.3.0",
+    "cz-conventional-changelog": "^3.2.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.10.0",
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
     "nodemon": "^2.0.4",
     "nyc": "^15.1.0",
-    "cz-conventional-changelog": "^3.2.0"
+    "supertest": "^5.0.0"
   },
   "husky": {
     "hooks": {
       "pre-commit": "concurrently -r \"yarn lint\"",
-      "pre-push": "concurrently -r \"yarn test\"",
+      "pre-push": "concurrently -r \"yarn check:cov\"",
       "prepare-commit-msg": "exec < /dev/tty && ./node_modules/.bin/git-cz --hook || true",
       "post-merge": "yarn"
     }
@@ -39,5 +42,11 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "nyc": {
+    "branches": "80",
+    "lines": "80",
+    "functions": "80",
+    "statements": "80"
   }
 }
